# mmixal

./: Cargo.toml  README.md
res/: not_prime.mms  prime.mms  prime113.mms  prime119.mms
src/: cli.rs  io.rs  is.rs  main.rs  parse.rs  passes.rs  syntax.rs  test.mms
