[package]
name = "mmixal"
version = "0.1.0"
authors = ["Janina Born <jaborn@uni-osnabrueck.de>",
           "Barbara Butz <bbutz@uni-osnabrueck.de>",
           "Karoline Plum <kplum@uni-osnabrueck.de>",
           "Tobias Stolzmann <tobias.stolzmann@gmail.com>"]

[dependencies]
lazy_static = "0.2"
regex = "0.2"
